[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Scripts/World.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Interface/FadeScreen.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Sound.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Interface/CustomButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Interface/SelectableButtons.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Interface/Interface.gd" type="Script" id=9]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Interface" type="Node2D" parent="."]
pause_mode = 2
z_index = 100
script = ExtResource( 9 )

[node name="FadeScreen" type="Node2D" parent="Interface"]
script = ExtResource( 3 )

[node name="Fade" type="ColorRect" parent="Interface/FadeScreen"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 320.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Interface/FadeScreen"]

[node name="PauseScreen" type="Node2D" parent="Interface"]

[node name="PauseButtons" parent="Interface/PauseScreen" instance=ExtResource( 8 )]
visible = false

[node name="ResumeButton" parent="Interface/PauseScreen/PauseButtons" instance=ExtResource( 7 )]
margin_left = 140.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 100.0
text = "RESUME"

[node name="MenuButton" parent="Interface/PauseScreen/PauseButtons" instance=ExtResource( 7 )]
margin_left = 140.0
margin_top = 120.0
margin_right = 220.0
margin_bottom = 140.0
text = "MENU"

[node name="MenuScreen" type="Node2D" parent="Interface"]
z_index = -1

[node name="MenuButtons" parent="Interface/MenuScreen" instance=ExtResource( 8 )]

[node name="StartButton" parent="Interface/MenuScreen/MenuButtons" instance=ExtResource( 7 )]
margin_left = 140.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 100.0
file = "res://Scenes/Levels/LevelA.tscn"
text = "START"

[node name="QuitButton" parent="Interface/MenuScreen/MenuButtons" instance=ExtResource( 7 )]
margin_left = 140.0
margin_top = 120.0
margin_right = 220.0
margin_bottom = 140.0
text = "QUIT"

[node name="World" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Sound" type="Node2D" parent="."]
script = ExtResource( 4 )
[connection signal="custom_pressed" from="Interface/PauseScreen/PauseButtons/ResumeButton" to="World" method="on_resume_button_pressed"]
[connection signal="custom_pressed" from="Interface/PauseScreen/PauseButtons/MenuButton" to="World" method="on_menu_button_pressed"]
[connection signal="custom_pressed" from="Interface/MenuScreen/MenuButtons/StartButton" to="World" method="on_start_button_pressed"]
[connection signal="custom_pressed" from="Interface/MenuScreen/MenuButtons/QuitButton" to="." method="on_quit_button_pressed"]
[connection signal="change_level" from="World" to="." method="on_world_change_level"]
[connection signal="goto_menu" from="World" to="." method="on_world_goto_menu"]
[connection signal="resume_level" from="World" to="." method="on_world_resume_level"]
